--- a/main.html
+++ b/main.html
@@ -127,10 +127,11 @@
     <a href="#contact">Contact</a>
   </nav>
 
-  <section class="hero">
-    <h2>Buy • Sell • Spin</h2>
-    <p>Discover rare records, iconic albums, and audiophile treasures</p>
-  </section>
+<section class="hero" style="background: url('360_F_605740304_gx0UWmyUXg1Qu4QUe1lkR0cGvxEfh92U.jpg') center/cover no-repeat;">
+  <h2>Buy • Sell • Spin</h2>
+  <p>Discover rare records, iconic albums, and audiophile treasures</p>
+</section>
+
 
   <section class="section" id="about">
     <h2>About Knight & Rook LLC</h2>
