--- a/main.html
+++ b/main.html
@@ -127,7 +127,7 @@
     <a href="#contact">Contact</a>
   </nav>
 
-<section class="hero" style="background: url('360_F_605740304_gx0UWmyUXg1Qu4QUe1lkR0cGvxEfh92U.jpg') center/cover no-repeat;">
+<section class="hero" style="background: url('plate-4759565_1920.jpg') center/cover no-repeat;">
   <h2>Buy • Sell • Spin</h2>
   <p>Discover rare records, iconic albums, and audiophile treasures</p>
 </section>
