--- a/main.html
+++ b/main.html
@@ -127,7 +127,7 @@
     <a href="#contact">Contact</a>
   </nav>
 
-<section class="hero" style="background: url('dj-4856147.jpg') center/cover no-repeat;">
+<section class="hero" style="background: url('pedalboard-4725871_1920.jpg') center/cover no-repeat;">
   <h2>Buy • Sell • Spin</h2>
   <p>Discover rare records, iconic albums, and audiophile treasures</p>
 </section>
